--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "update-install": "npm update; npm install",
-    "deploy": "npm run build; aws --profile unegma s3 sync --delete ./build/ s3://zk.contact/"
+    "deploy": "npm run build; aws --profile unegma s3 sync --delete ./build/ s3://zk-contact.unegma.info/"
   },
   "eslintConfig": {
     "extends": [
