Change to generate static

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && node generate-static.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "update-install": "npm update; npm install",
-    "deploy": "npm run build; aws --profile unegma s3 sync --delete ./build/ s3://zk-contact.unegma.info/"
+    "deploy": "npm run build && aws --profile unegma s3 sync --delete ./build/ s3://zk-contact.unegma.info/"
   },
   "eslintConfig": {
     "extends": [
